lab3/syntax.output
Terminals unused in grammar

    NEWLINE
    NAGATE
    LOWER_THAN_RB


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB ID RB
   21       | VarDec LB error RB
   22       | VarDec LB ID error

   23 FunDec: ID LP VarList RP
   24       | ID LP RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | Exp error
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | IF LP error RP Stmt
   39     | IF LP error RP Stmt ELSE Stmt
   40     | WHILE LP error RP Stmt
   41     | RETURN Exp error

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI
   46    | error DecList SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | VarDec ASSIGNOP error

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp ASSIGNOP error
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | LP error RP
   72    | ID LP error RP
   73    | Exp LB error RB

   74 Args: Exp COMMA Args
   75     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 14 21 22 32 38 39 40 41 45 46 51 53 71 72 73
    INT (258) 19 69
    FLOAT (259) 70
    TYPE (260) 10
    NEWLINE (261)
    ID (262) 15 17 18 20 22 23 24 64 65 67 68 72
    SEMI (263) 4 5 31 34 44 45 46
    COMMA (264) 9 25 48 74
    DOT (265) 67
    ASSIGNOP (266) 50 51 52 53
    RELOP (267) 56
    PLUS (268) 57
    MINUS (269) 58 62
    STAR (270) 59
    DIV (271) 60
    AND (272) 54
    OR (273) 55
    NOT (274) 63
    LP (275) 23 24 35 36 37 38 39 40 61 64 65 71 72
    RP (276) 23 24 35 36 37 38 39 40 61 64 65 71 72
    LB (277) 19 20 21 22 66 73
    RB (278) 19 20 21 66 73
    LC (279) 12 14 28
    RC (280) 12 14 28
    STRUCT (281) 12 13 14
    RETURN (282) 34 41
    IF (283) 35 36 38 39
    ELSE (284) 36 39
    WHILE (285) 37 40
    NAGATE (286)
    LOWER_THAN_RB (287)
    LOWER_THAN_ELSE (288)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    Program (35)
        on left: 1
        on right: 0
    ExtDefList (36)
        on left: 2 3
        on right: 1 2
    ExtDef (37)
        on left: 4 5 6 7
        on right: 2
    ExtDecList (38)
        on left: 8 9
        on right: 4 9
    Specifier (39)
        on left: 10 11
        on right: 4 5 6 7 27 44 45
    StructSpecifier (40)
        on left: 12 13 14
        on right: 11
    OptTag (41)
        on left: 15 16
        on right: 12 14
    Tag (42)
        on left: 17
        on right: 13
    VarDec (43)
        on left: 18 19 20 21 22
        on right: 8 9 19 20 21 22 27 49 50 51
    FunDec (44)
        on left: 23 24
        on right: 6
    VarList (45)
        on left: 25 26
        on right: 23 25
    ParamDec (46)
        on left: 27
        on right: 25 26
    CompSt (47)
        on left: 28
        on right: 6 33
    StmtList (48)
        on left: 29 30
        on right: 28 29
    Stmt (49)
        on left: 31 32 33 34 35 36 37 38 39 40 41
        on right: 29 35 36 37 38 39 40
    DefList (50)
        on left: 42 43
        on right: 12 28 42
    Def (51)
        on left: 44 45 46
        on right: 42
    DecList (52)
        on left: 47 48
        on right: 44 46 48
    Dec (53)
        on left: 49 50 51
        on right: 47 48
    Exp (54)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 31 32 34 35 36 37 41 50 52 53 54 55 56 57 58 59 60 61 62 63 66 67 73 74 75
    Args (55)
        on left: 74 75
        on right: 64 74


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error .

    $default  reduce using rule 7 (ExtDef)


State 14

   18 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 18 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB ID RB
   21       | VarDec . LB error RB
   22       | VarDec . LB ID error

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 20

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 23

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . ID RB
   21       | VarDec LB . error RB
   22       | VarDec LB . ID error

    error  shift, and go to state 36
    INT    shift, and go to state 37
    ID     shift, and go to state 38


State 24

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 39
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 40
    Def              go to state 29


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   14 StructSpecifier: STRUCT OptTag LC error . RC
   46 Def: error . DecList SEMI

    ID  shift, and go to state 34
    RC  shift, and go to state 41

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 27

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 34

    VarDec   go to state 42
    DecList  go to state 46
    Dec      go to state 44


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 29

   42 DefList: Def . DefList

    error   shift, and go to state 39
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 43 (DefList)
    FLOAT   reduce using rule 43 (DefList)
    ID      reduce using rule 43 (DefList)
    MINUS   reduce using rule 43 (DefList)
    NOT     reduce using rule 43 (DefList)
    LP      reduce using rule 43 (DefList)
    LC      reduce using rule 43 (DefList)
    RC      reduce using rule 43 (DefList)
    RETURN  reduce using rule 43 (DefList)
    IF      reduce using rule 43 (DefList)
    WHILE   reduce using rule 43 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 48
    Def              go to state 29


State 30

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 31

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 49


State 32

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 33

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 26 (VarList)


State 34

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 52


State 37

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 38

   20 VarDec: VarDec LB ID . RB
   22       | VarDec LB ID . error

    error  shift, and go to state 54
    RB     shift, and go to state 55


State 39

   46 Def: error . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 40

   28 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 24
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 41

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 42

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB ID RB
   21       | VarDec . LB error RB
   22       | VarDec . LB ID error
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp
   51    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 23

    $default  reduce using rule 49 (Dec)


State 43

   46 Def: error DecList . SEMI

    SEMI  shift, and go to state 70


State 44

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 47 (DecList)


State 45

   45 Def: Specifier error . SEMI

    SEMI  shift, and go to state 72


State 46

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB ID RB
   21       | VarDec . LB error RB
   22       | VarDec . LB ID error
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 27 (ParamDec)


State 50

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 51

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 74
    ParamDec         go to state 33


State 52

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 53

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 54

   22 VarDec: VarDec LB ID error .

    $default  reduce using rule 22 (VarDec)


State 55

   20 VarDec: VarDec LB ID RB .

    $default  reduce using rule 20 (VarDec)


State 56

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 57

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 58

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .
   72    | ID . LP error RP

    LP  shift, and go to state 75

    $default  reduce using rule 68 (Exp)


State 59

   62 Exp: MINUS . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 76


State 60

   63 Exp: NOT . Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 77


State 61

   61 Exp: LP . Exp RP
   71    | LP . error RP

    error  shift, and go to state 78
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 79


State 62

   34 Stmt: RETURN . Exp SEMI
   41     | RETURN . Exp error

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 80


State 63

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . LP error RP Stmt
   39     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 64

   37 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . LP error RP Stmt

    LP  shift, and go to state 82


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 67

   29 StmtList: Stmt . StmtList

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    NOT     shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 24
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 84
    Stmt      go to state 67
    Exp       go to state 68


State 68

   31 Stmt: Exp . SEMI
   32     | Exp . error
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . ASSIGNOP error
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   73    | Exp . LB error RB

    error     shift, and go to state 85
    SEMI      shift, and go to state 86
    DOT       shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96


State 69

   50 Dec: VarDec ASSIGNOP . Exp
   51    | VarDec ASSIGNOP . error

    error  shift, and go to state 97
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    NOT    shift, and go to state 60
    LP     shift, and go to state 61

    Exp  go to state 98


State 70

   46 Def: error DecList SEMI .

    $default  reduce using rule 46 (Def)


State 71

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 42
    DecList  go to state 99
    Dec      go to state 44


State 72

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 73

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 74

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 75
